# FeedBack_vvpk

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: database.db
src/: __main__.py  config.py
src/data_base/: __init__.py  adds.py  exists.py  select.py  update.py
src/handlers/: comands.py  menu.py  submenu.py  view_feedback.py
src/keyboards/: __init__.py  admin.py  keyboardmenu.py
