[tool.poetry]
name = "feedback-vvpk"
version = "0.1.0"
description = ""
authors = ["Matsu016 <maks.tcyrbanov102599@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
aiosqlite = "^0.20.0"
asyncache = "^0.3.1"
sentry-sdk = "^2.7.1"

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
